<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find the Word</string>
    <string name="action_settings">Settings</string>
    <string name="startInformation">Try to memorise the words that will be appeared in the following screen</string>
    <string name="desc">This could be an image description</string>
    <string name="proceed">PROCEED</string>

    <color name="grey">#2C2B2E</color>
    <color name="white">#FFFFFF</color>
    <color name="darker_gray">#141415</color>
    <color name="black">#000000</color>

    <string name="title_activity_start">StartActivity</string>
    <string name="press_start">Press start</string>
    <string name="start">START</string>
    <string name="title_activity_word_appearance">WordAppearance</string>
    <string name="firstWord">Cinnamon</string>

    <string-array name="first_round">
        <item>Cinnamon</item>
        <item>Apple</item>
        <item>Milk</item>
        <item>Detergent</item>
        <item>Cheese</item>
        <item>Shampoo</item>
        <item>Butter</item>
        <item>Tangerine</item>
        <item>Coffee</item>
        <item>Marmalade</item>
        <item>Cabbage</item>
        <item>Meat</item>
    </string-array>

    <string name="title_activity_check_point">CheckPoint</string>
    <string name="checkInformation">Check the words that you have previously seen</string>
    <string name="title_activity_check_words">CheckWords</string>
    <string name="seen">SEEN</string>
    <string name="unseen">UNSEEN</string>
    <string name="title_activity_final_results">FinalResults</string>
    <string name="hello_world">Hello world!</string>
    
    <string-array name="first_round_check">
        <item>Water</item>
        <item>Jam</item>
        <item>Chicken</item>
        <item>Coffee</item>
        <item>Butter</item>
        <item>Orange</item>
        <item>Rice</item>
        <item>Milk</item>
        <item>Pasta</item>
        <item>Apple</item>
        <item>Mushroom</item>
        <item>Onion</item>
        <item>Bread</item>
        <item>Marmalade</item>
        <item>Margarine</item>
        <item>Courgette</item>
        <item>Cinnamon</item>
        <item>Meat</item>
        <item>Sugar</item>
        <item>Potato</item>
        <item>Lettuce</item>
        <item>Deodorant</item>
        <item>Shampoo</item>
        <item>Tangerine</item>
        <item>Cheese</item>
        <item>Yogurt</item>
        <item>Caramel</item>
        <item>Detergent</item>
        <item>Beer</item>
        <item>Espresso</item>
    </string-array>

    <string name="game_over">Game is over!</string>
    <string name="right_answers">Right Answers: </string>
    <string name="wrong_answers">Wrong Answers: </string>
    <string name="final_score">FInal Score: </string>
    <string name="back_to_menu">BACK TO MENU</string>
    
    

</resources>
