<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.example.findtheword.StartActivity" >
    
    <TextView
        android:id="@+id/pressStartTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/press_start"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
    
    <ImageButton
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@null"
        android:contentDescription="@string/desc"
        android:src="@drawable/ic_play" />
    
    <TextView
        android:id="@+id/startTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center_horizontal"
        android:text="@string/start"
        android:textColor="@color/white" />
    

</LinearLayout>