<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/borders"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context="com.example.findtheword.FinalResults" >
    
    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
     
	     <TextView
	        android:id="@+id/rightAnswersTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/right_answers"
	        android:textColor="@color/white"/>
	     
	     <TextView
	        android:id="@+id/rightAnswersNrTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/right_answers"
	        android:textColor="@color/white" />
	     
	</LinearLayout>
	
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
     
	     <TextView
	        android:id="@+id/wrongAnswersTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/wrong_answers"
	        android:textColor="@color/white"/>
	     
	     <TextView
	        android:id="@+id/wrongAnswersNrTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/wrong_answers"
	        android:textColor="@color/white"/>
	     
	</LinearLayout>
    
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
     
	     <TextView
	        android:id="@+id/finalScoreTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/final_score"
	        android:textColor="@color/white"/>
	     
	     <TextView
	        android:id="@+id/finalScoreNrTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/final_score"
	        android:textColor="@color/white"/>
	     
	</LinearLayout>
	
    <TextView
        android:id="@+id/spaceTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="" />
	
    <ImageButton
        android:id="@+id/backToMenuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@null"
        android:contentDescription="@string/desc"
        android:onClick="startPlay"
        android:src="@drawable/ic_controller" />
    
    <TextView
        android:id="@+id/backToMenuTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center_horizontal"
        android:text="@string/back_to_menu"
        android:textColor="@color/white" />

</LinearLayout>
